--- a/AmazonFarm/AmazonFarm.csproj
+++ b/AmazonFarm/AmazonFarm.csproj
@@ -6,16 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Selenium.Support" Version="3.141.0" />
+    <PackageReference Include="log4net" Version="2.0.12" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Selenium.Support" Version="4.0.0-beta2" />
     <PackageReference Include="Selenium.WebDriver" Version="4.0.0-beta2" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="89.0.4389.2300" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="90.0.4430.2400-beta" />
     <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="Config.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
